apps/printquick/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels:
    app.kubernetes.io/name: printquick
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: printquick
  template:
    metadata:
      labels:
        app.kubernetes.io/name: printquick
    spec:
      containers:
        - name: laravel
          image: ghcr.io/navaneeth-dev/printquick:0.0.1
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: regcred
