apps/printquick/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  selector:
    app.kubernetes.io/name: printquick
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
